fixed long name from wrapping

--- a/src/routes/Leaderboard/index.css
+++ b/src/routes/Leaderboard/index.css
@@ -79,6 +79,7 @@
   background-color: unset;
   margin: unset;
   font-size: 25px;
+  white-space: nowrap;
 }
 
 .leaderboard_content_container .backgroundImg {
